fix(composer): Change text color of collapsed recipients
Change the color to be regular text, instead of the same color as
placeholder text.

--- a/internal_packages/composer/stylesheets/composer.less
+++ b/internal_packages/composer/stylesheets/composer.less
@@ -135,6 +135,7 @@
 
     .collapsed-contact {
       padding-right: 0.25em;
+      color: @text-color;
       &:after {
         content: ","
       }
